--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first web</title>
+    <link rel="stylesheet" href="style/blog.css">
 </head>
 <body>
-    
+    <div>
+<h3>
+
+My first web
+
+</h3>
+<p>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis expedita quasi laudantium aliquid ea quo consequatur qui, ratione inventore fugit, quisquam corporis sequi quidem magnam mollitia! Odit magnam ad adipisci.
+</p>
+
+    </div>
 </body>
 </html>
