kisu change kore nai

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ My first web
 <p>
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis expedita quasi laudantium aliquid ea quo consequatur qui, ratione inventore fugit, quisquam corporis sequi quidem magnam mollitia! Odit magnam ad adipisci.
 </p>
-
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis alias laborum culpa, similique doloribus aut necessitatibus quaerat unde perspiciatis voluptatem? Eos sequi ratione labore maiores magni laborum corrupti minus a.</p>
     </div>
 </body>
 </html>
