--- a/index.html
+++ b/index.html
@@ -3,20 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first web</title>
-    <link rel="stylesheet" href="style/blog.css">
+    <title>Document</title>
 </head>
 <body>
-    <div>
-<h3>
+    <header>
 
-My first web
+<nav>
 
-</h3>
-<p>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis expedita quasi laudantium aliquid ea quo consequatur qui, ratione inventore fugit, quisquam corporis sequi quidem magnam mollitia! Odit magnam ad adipisci.
-</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis alias laborum culpa, similique doloribus aut necessitatibus quaerat unde perspiciatis voluptatem? Eos sequi ratione labore maiores magni laborum corrupti minus a.</p>
+<div class="menu-container"></div>
+    <div class="logo">
+        <img src="" alt="">
+        <li>home-1</li>
+        <li>home-2</li>
+        <li>home-3</li>
+        <li>home-4</li>        
     </div>
+    <div class="menus"></div>
+
+</nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+
+        
+
+    </footer>
+
 </body>
 </html>
