--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>test website</title>
+    <link rel="stylesheet" href="./style/blog.css">
 </head>
 <body>
     <header>
@@ -26,7 +27,6 @@
 
     </main>
     <footer>
-
 
         
 
